<resources>
    <string name="toolbar_schedulers">Расписание</string>
    <string name="toolbar_news">Новости</string>
    <string name="toolbar_navigator">Навигатор</string>
    <string name="app_name">Физтех</string>
    <string name="empty" />
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="message_some_error_try_late">Произошла ошибка. Попробуйте позже.</string>
    <string name="menu_study">Учеба</string>
    <string name="menu_news">Новости</string>
    <string name="menu_chat">Чат</string>
    <string name="menu_navigator">Навигатор</string>
    <string name="menu_services">Сервисы</string>
    <string name="what_news.title">Что нового?</string>
    <string name="what_news.item1">Value 1</string>
    <string name="what_news.item2">Value 2</string>
    <string name="what_news.item3">Value 3</string>
    <string name="what_news.item4">Value 4</string>
    <string name="what_news.item5">Long value Long value Long value Long value Long value Long value Long value Long value Long value Long value Long value Long value Long value</string>
    <string name="accept_title">Класс</string>
    <string name="authorization.title">Для продолжения работы необходимо пройти авторизацию через личный кабинет</string>
    <string name="authorization.student.title">Я студент</string>
    <string name="authorization.student.subtitle">Необходима почта в домене @phystech.edu</string>
    <string name="authorization.employee.title">Я сотрудник</string>
    <string name="authorization.employee.subtitle">Необходим корпоративный аккаунт (логин в виде ivanov.ii и пароль)</string>
    <string name="authorization.guest.title">Я гость</string>
    <string name="authorization.guest.dialog.title">Я гость</string>
    <string name="authorization.guest.dialog.description">Это ограничит доступный функционал</string>
    <string name="add_group">Add</string>
    <string name="delete_group">Delete group</string>
    <string name="spaces_switcher">Spaces</string>
    <string-array name="week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="week_short">
        <item>ПН</item>
        <item>ВТ</item>
        <item>СР</item>
        <item>ЧТ</item>
        <item>ПТ</item>
        <item>СБ</item>
        <item>ВС</item>
    </string-array>
    <string name="Monday_short">ПН</string>
    <string name="Tuesday_short">ВТ</string>
    <string name="Wednesday_short">СР</string>
    <string name="Thursday_short">ЧТ</string>
    <string name="Friday_short">ПТ</string>
    <string name="Saturday_short">СБ</string>
    <string name="Sunday_short">ВС</string>
    <string name="Monday">Понедельник</string>
    <string name="Tuesday">Вторник</string>
    <string name="Wednesday">Среда</string>
    <string name="Thursday">Четверг</string>
    <string name="Friday">Пятница</string>
    <string name="Saturday">Суббота</string>
    <string name="Sunday">Воскресенье</string>
    <string-array name="month">
        <item name="January">Январь</item>
        <item name="February">Февраль</item>
        <item name="March">Март</item>
        <item name="April">Апрель</item>
        <item name="May">Май</item>
        <item name="June">Июнь</item>
        <item name="July">Июль</item>
        <item name="August">Август</item>
        <item name="September">Сентябрь</item>
        <item name="October">Октябрь</item>
        <item name="November">Ноябрь</item>
        <item name="December">Декабрь</item>
    </string-array>
    <string-array name="weeks">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
    <string-array name="weeks_en">
        <item>Воскресенье</item>
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
    </string-array>
    <string name="today">сегодня</string>
    <string name="yesterday">вчера</string>
    <string name="tip_add_group_title">Favourite groups</string>
    <string name="tip_add_group_summary">Now you can switch between favourite groups easily</string>
    <string name="tip_edit_title">Tap to edit</string>
    <string name="tip_edit_summary">You can edit any subject, just click on it!</string>
    <string name="tip_add_subject_title">Add new subject</string>
    <string name="tip_add_subject_summary">Tap to add new subject</string>
    <string name="tip_settings_title">Settings</string>
    <string name="tip_settings_summary">Open to set up theme and notifications</string>
    <string name="edit_text_hint">Enter your group number</string>
    <string name="button_start">Start</string>
    <string name="search_hint">Search for a group</string>
    <string name="create_dialog_title">Create new group</string>
    <string name="create_dialog_positive">Create</string>
    <string name="create_dialog_negative">Cancel</string>
    <string name="create_dialog_hint">Enter group name</string>
    <string name="create_dialog_error">Group name must be not empty</string>
    <string name="title_new">New lesson</string>
    <string name="title_edit">Edit lesson</string>
    <string name="name_hint">Lesson</string>
    <string name="place_hint">Place</string>
    <string name="prof_hint">Professor</string>
    <string name="start_time_hint">Start time</string>
    <string name="end_time_hint">End time</string>
    <string name="notes_hint">Notes</string>
    <string name="type_hint">Lesson type</string>
    <string name="day_hint">Day of the week</string>
    <string name="default_start_time">9:00</string>
    <string name="default_end_time">10:25</string>
    <string name="error_empty_string">Text must be not empty</string>
    <string name="error_time">Incorrect time</string>
    <string name="error_hint">Cannot be saved</string>
    <string name="empty_string" />
    <string-array name="lesson_types_text">
        <item>Seminar</item>
        <item>Lecture</item>
        <item>Laboratory</item>
        <item>Rest</item>
        <item>Botay</item>
    </string-array>
    <string name="dialog_title">Confirmation</string>
    <string name="delete_message">Вы уверены, что хотите удалить?</string>
    <string name="reset_message">"Are you sure that you want to reset? "</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Previous</string>
    <string name="image">Image</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_appearance">Appearance</string>
    <string name="pref_theme_title">Choose theme</string>
    <string-array name="pref_theme_list_titles">
        <item>Light</item>
        <item>Dark</item>
        <item>Default</item>
    </string-array>
    <string-array name="pref_theme_list_values">
        <item>light</item>
        <item>dark</item>
        <item>default</item>
    </string-array>
    <string name="pref_stars_title">Night sky</string>
    <string name="pref_stars_summary">Animated night sky is available in the Dark theme</string>
    <string name="pref_spaces_title">Spaces</string>
    <string name="pref_spaces_summary">Show spaces between lessons</string>
    <string name="pref_header_data_sync">Schedule</string>
    <string name="pref_reset_title">Reset schedule</string>
    <string name="pref_reset_summary">Delete all changes you\'ve made</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_lesson_notification_title">Lesson notifications</string>
    <string name="pref_lesson_notification_summary">"App will notify you before each lesson "</string>
    <string name="pref_notification_before_title">Notify about the lesson in</string>
    <string-array name="pref_notification_before_list_titles">
        <item>1 minute</item>
        <item>2 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>
    <string-array name="pref_notification_before_list_values">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string name="pref_group_title">Group for notifications</string>
    <string name="pref_title_ringtone">Sound</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_system_notification_title">System settings</string>
    <string name="pref_header_communication">Communication</string>
    <string name="pref_share_app_title">Share this app</string>
    <string name="pref_share_message">Try MIPT schedule app</string>
    <string name="pref_write_developer_title">Write to developer</string>
    <string name="pref_write_developer_url">https://vk.com/yasha_kayumov</string>
    <string name="pref_rate_app_title">Rate this app</string>
    <string name="pref_rate_app_url">https://play.google.com/store/apps/details?id=dev.phystech.mipt</string>
    <string name="notification_title">%s (%s)</string>
    <string name="notification_text_time">В %s</string>
    <string name="notification_text_place">\u0020in %s</string>
    <string name="notification_time_is_up">The lesson has already begun</string>
    <string name="break_extra_short">Break is just %d minutes :(</string>
    <string name="break_short">%d minute break - a cup of tea?</string>
    <string name="break_medium">%d minutes are enough to eat</string>
    <string name="break_long">%d-minute break. Finally, some good sleep!</string>
    <string name="break_title">Перерыв %d минут.</string>
    <string name="break_extra_short_comment">Успеешь добежать до кабинета</string>
    <string name="break_short_comment">Наконец-то можно выпить кофе</string>
    <string name="break_medium_comment">Можно покушать</string>
    <string name="break_long_comment">Можно поспать!</string>
    <string name="schedule_item_sem">Семинар</string>
    <string name="schedule_item_lec">Лекция</string>
    <string name="schedule_item_lab">Лаб.практикум</string>
    <string name="event_item_exam">Экзамен</string>
    <string name="guest_name">Гость</string>
    <string name="title_call">Позвонить</string>
    <string name="title_copy">Скопировать</string>
    <string name="title_write_email">Написать e-mail</string>
    <string name="cancel">Отмена</string>
    <string name="login">Войти</string>
    <string name="login_warning">Для полного доступа необходимо войти в личный кабинет</string>
    <string name="events_title">События</string>
    <string name="scheduler">Расписание</string>
    <string name="add_lesson">Добавить занятие</string>
    <string name="back_changes">Сбросить изменения</string>
    <string name="notify_error">Сообщить об ошибке</string>
    <string name="add_deadline">Добавить дедлайн</string>
    <string name="add_event">Добавить событие</string>
    <string name="change_title">Изменение</string>
    <string name="change_description">Вы хотите внести изменение в занятие:</string>
    <string name="edit_for_self">Для себя</string>
    <string name="edit_for_group">для всех участников</string>
    <string name="edit_scheduler_change">сменить занятие</string>
    <string name="empty_day_description_sunday">Наконец-то можно поспать!</string>
    <string name="schedule_notify_title">Уведомлять о занятии за</string>
    <string name="min_1">1 минуту</string>
    <string name="min_2">2 минуты</string>
    <string name="min_5">5 минут</string>
    <string name="min_10">10 минут</string>
    <string name="no_schedule">Нет занятий</string>
    <string name="delete">Удалить</string>
</resources>