<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/legendLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    tools:ignore="HardcodedText">

    <TextView
        android:id="@+id/legendText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Monday_short"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:alpha="0.6"/>

    <TextView
        android:id="@+id/legendText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Tuesday_short"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:alpha="0.6"/>

    <TextView
        android:id="@+id/legendText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Wednesday_short"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:alpha="0.6"/>

    <TextView
        android:id="@+id/legendText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Thursday_short"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:alpha="0.6"/>

    <TextView
        android:id="@+id/legendText5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Friday_short"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:alpha="0.6"/>

    <TextView
        android:id="@+id/legendText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Saturday_short"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:alpha="0.6"/>

    <TextView
        android:id="@+id/legendText7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Sunday_short"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:alpha="0.6"/>

</LinearLayout>
