<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetEvents"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events_title"
            style="@style/Text.Big.Bold"
            android:textColor="@color/black"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:id="@+id/tvToSchedulers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:background="?attr/selectableItemBackground"
            android:layout_marginEnd="6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.Standard_14"
                android:paddingVertical="10dp"
                android:layout_marginEnd="2dp"
                android:textColor="#99000000"
                android:text="@string/scheduler"/>
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_arrow_right_text"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary_text"/>

    <LinearLayout
        android:id="@+id/llAddLesson"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="17dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_add_lesson"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Text.Standard_14.Bold"
            android:textColor="@color/black"
            android:text="@string/add_lesson"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddEvent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_add_event"
            android:layout_marginEnd="32dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Text.Standard_14.Bold"
            android:textColor="@color/black"
            android:text="@string/add_event"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddDeadline"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_add_deadline"
            android:layout_marginEnd="32dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Text.Standard_14.Bold"
            android:textColor="@color/black"
            android:text="@string/add_deadline"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNotifyError"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_error"
            android:layout_marginEnd="32dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Text.Standard_14.Bold"
            android:textColor="@color/black"
            android:text="@string/notify_error"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBackChanges"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:visibility="gone"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back_changes"
            android:layout_marginEnd="32dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Text.Standard_14.Bold"
            android:textColor="@color/black"
            android:text="@string/back_changes"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>